postgres-macros/tests/fail/positional_after_named.rs
fn main() {
    sqlm_postgres_macros::sql!("{one} {}", one = 1, 2);
}
