postgres-macros/tests/fail/positional_after_named.stderr
error: positional arguments cannot follow named arguments
 --> tests/fail/positional_after_named.rs:2:53
  |
2 |     sqlm_postgres_macros::sql!("{one} {}", one = 1, 2);
  |                                                     ^
